--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #FFCC00;
+    background-color: white;
 }
 
 .top-left {
@@ -13,14 +13,18 @@ body {
 
 .bottom-left {
   grid-area: bottom-left;
-  background-color: red;
+  background-color: white;
 
 }
 
 .top-right {
   grid-area: top-right;
-  background-color: red;
+  background-image: url("stupidkitten.jpg");
+  background-position: center;
+  background-size: cover;
+  background-color: white;
 }
+/*while video is loading background image will be displayed*/
 
 .bottom-right {
   grid-area: bottom-right;
@@ -39,13 +43,22 @@ body {
   "bottom-right";
 }
 
-.fab {
-  position: absolute;
+.insta {
+  display: flex;
+  align-items: center;
   color: white;
-  font-weight: bold;
-  font-size: 3vw;
-  right: 25px;
-  bottom: 20px;
+  position: absolute;
+  left: 30px;
+  bottom: 15px;
+}
+
+.insta-logo {
+
+  font-size: 2.8vw;
+}
+
+.instaname {
+  font-size: 2.3vw;
 }
 
 .video {
@@ -70,6 +83,7 @@ body {
 .track {
   width:100%;
   height:100%;
+  opacity: 0.2;
 }
 
 .runner {
@@ -96,9 +110,13 @@ body {
   "bottom-left bottom-right";
   }
 
-  .fab {
-  font-size: 1.4vw;
+  .insta-logo {
+  font-size: 1.2vw;
   }
+
+  .instaname {
+  font-size: 0.8vw;
+}
 }
 
 
