--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: white;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
 }
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+/*TOP LEFT*/
 
 .top-left {
   grid-area: top-left;
@@ -11,11 +19,86 @@ body {
   position: relative;
 }
 
+.runner {
+  width:100%;
+  height:100%;
+}
+
+.insta-logo {
+  font-size: 2.6vw;
+}
+
+.instaname {
+  display: flex;
+  align-items: center;
+  color: white;
+  position: absolute;
+  left: 5vw;
+  bottom: 1.5vh;
+  font-size: 1.9vw;
+}
+
+/*BOTTOM LEFT*/
+
 .bottom-left {
   grid-area: bottom-left;
-  background-color: white;
-
+  background-color: #DCDCDC;
+  position: relative;
 }
+
+.track {
+  width:100%;
+  height:100%;
+  opacity: 0.1;
+}
+
+.info-grid {
+  position: absolute;
+  left: 13vw;
+  bottom: 7vh;
+  display: grid;
+  grid-template-columns: 25vw 45vw;
+  grid-template-rows: 20vh 5vh;
+  grid-template-areas:
+  "main-info main-info"
+  "info-one info-two";
+}
+
+.main-info {
+  grid-area: main-info;
+}
+.info-one {
+  grid-area: info-one;
+}
+
+.info-two {
+  grid-area: info-two;
+}
+
+.info-grid p {
+  /*font-family: 'Roboto', sans-serif;*/
+  font-weight: lighter;
+  color: #1D3790;
+}
+
+p.info-title {
+  margin-bottom: 1vh;
+}
+
+p.info-sub {
+  margin-bottom: 0.5vh;
+}
+
+.info-title {
+  font-size: 5vw;
+}
+
+.info-sub {
+  font-size: 2.5vw;
+  font-weight: lighter;
+}
+
+/*TOP RIGHT*/
 
 .top-right {
   grid-area: top-right;
@@ -26,50 +109,19 @@ body {
 }
 /*while video is loading background image will be displayed*/
 
-.bottom-right {
-  grid-area: bottom-right;
-  background-color: #F6F6F6;
-  text-align: center;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 100vw;
-  grid-template-rows: 40vh 60vh 40vh 60vh;
-  grid-template-areas:
-  "top-right"
-  "top-left"
-  "bottom-left"
-  "bottom-right";
-}
-
-.insta {
-  display: flex;
-  align-items: center;
-  color: white;
-  position: absolute;
-  left: 30px;
-  bottom: 15px;
-}
-
-.insta-logo {
-
-  font-size: 2.8vw;
-}
-
-.instaname {
-  font-size: 2.3vw;
-}
-
 .video {
   width: 100%;
   height: 100%;
   object-fit: fill;
 }
 
-}
+
+/*BOTTOM RIGHT*/
 
 .bottom-right {
+  grid-area: bottom-right;
+  background-color: #F6F6F6;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,18 +132,19 @@ body {
   height:100%;
 }
 
-.track {
-  width:100%;
-  height:100%;
-  opacity: 0.2;
+
+.general-grid {
+  display: grid;
+  grid-template-columns: 100vw;
+  grid-template-rows: 40vh 60vh 40vh 60vh;
+  grid-template-areas:
+  "top-right"
+  "top-left"
+  "bottom-left"
+  "bottom-right";
 }
 
-.runner {
-  width:100%;
-  height:100%;
-}
-
-
+/*DESKTOP DISPLAY*/
 
 @media(min-width: 600px) {
   body {
@@ -100,23 +153,49 @@ body {
     align-items: center;
   }
 
-  .grid {
-  display: grid;
-  grid-template-columns: 40vw 40vw;
-  grid-template-rows: 38vh 18vh 38vh;
-  grid-template-areas:
-  "top-left top-right"
-  "top-left bottom-right"
-  "bottom-left bottom-right";
+  .general-grid {
+    display: grid;
+    grid-template-columns: 40vw 40vw;
+    grid-template-rows: 38vh 18vh 38vh;
+    grid-template-areas:
+    "top-left top-right"
+    "top-left bottom-right"
+    "bottom-left bottom-right";
   }
 
   .insta-logo {
-  font-size: 1.2vw;
+    font-size: 1.3vw;
   }
 
   .instaname {
-  font-size: 0.8vw;
-}
+    display: flex;
+
+    color: white;
+    position: absolute;
+    left: 2.9vw;
+    bottom: 3.1vh;
+    font-size: 0.8vw;
+  }
+
+  .info-grid {
+  left: 3vw;
+  bottom: 5vh;
+  display: grid;
+  grid-template-columns: 10vw 18vw;
+  grid-template-rows: 19vh 4vh;
+  grid-template-areas:
+  "main-info main-info"
+  "info-one info-two";
+  }
+
+  .info-title {
+  font-size: 1.8vw;
+  }
+
+  .info-sub {
+  font-size: 0.7vw;
+  font-weight: lighter;
+  }
 }
 
 
