--- a/style.css
+++ b/style.css
@@ -125,13 +125,39 @@ p.info-sub {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
 }
 
 .sock {
-  width:100%;
-  height:100%;
+  width:80%;
+  height:80%;
+  z-index: 10;
+  position: relative;
 }
 
+.line {
+  width: 120%;
+  height: 3.5%;
+  background: #1D3690;
+  position: absolute;
+  left: -62%;
+  bottom: 31%;
+}
+
+.left-line {
+  transform: rotate(35deg);
+  transform-origin: 102%;
+}
+.right-line {
+  transform: rotate(140deg);
+  transform-origin: 99%;
+}
+
+.bottom-line {
+  transform: rotate(-40deg);
+  transform-origin: 99%;
+}
 
 .general-grid {
   display: grid;
@@ -143,6 +169,7 @@ p.info-sub {
   "bottom-left"
   "bottom-right";
 }
+
 
 /*DESKTOP DISPLAY*/
 
