--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ p {
 .runner {
   width:100%;
   height:100%;
+  object-fit: cover;
 }
 
 .insta-logo {
@@ -104,10 +105,9 @@ p {
 
 .top-right {
   grid-area: top-right;
-  background-image: url("chuck.jpg");
+  /*background-image: url("chuck.jpg");
   background-position: center;
-  background-size: cover;
-  background-color: white;
+  background-size: cover;*/
   position:relative;
   overflow: hidden;
 }
@@ -160,6 +160,7 @@ p {
   height:80%;
   z-index: 1;
   position: relative;
+  object-fit: contain;
 }
 
 .sock {
