--- a/style.css
+++ b/style.css
@@ -105,20 +105,14 @@ p {
 
 .top-right {
   grid-area: top-right;
-  /*background-image: url("chuck.jpg");
-  background-position: center;
-  background-size: cover;*/
   position:relative;
   overflow: hidden;
 }
-/*while video is loading background image will be displayed*/
 
 .video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  position:absolute;
-  bottom: -30%;
+  object-fit: fill;
 }
 
 .overlay {
@@ -195,7 +189,7 @@ p {
 
 /*DESKTOP DISPLAY*/
 
-@media(min-width: 769px) {
+@media(min-width: 600px) {
   body {
     display: flex;
     justify-content: center;
@@ -244,13 +238,6 @@ p {
   }
 
   /*TOP RIGHT / VIDEO*/
-  .video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position:absolute;
-    bottom: -15%;
-  }
 
   .overlay {
     bottom: 13%;
